# lisp_vxlan_ansible

./: .gitignore  :w  LICENSE  README.md  hosts.yml  pyproject.toml  requirements.txt
group_vars/: all.yml  net.yml
host_vars/: border1-9500.yml  border2-9500.yml  edge1-9300.yml  edge2-9300.yml  fusion1-isr4451.yml  fusion2-isr4451.yml
playbooks/: border-bgp.yml  border-external.yml  border-l2-l3-overlay.yml  border-pub-sub.yml  configure.yml  edge-interfaces.yml  edge-l2-flooding.yml  edge-l2-l3-overlay.yml  edge-pub-sub.yml  fusion-bgp.yml  test_filter.yml
playbooks/files/border1-9500/: border-bgp.conf  border-dynamic-external.conf  border-l2-l3-overlay.conf  border-pub-sub.conf
playbooks/files/border2-9500/: border-bgp.conf  border-l2-l3-overlay.conf  border-pub-sub.conf
playbooks/files/edge1-9300/: edge-interfaces.conf  edge-l2-flooding-overlay.conf  edge-l2-l3-overlay.conf  edge-pub-sub.conf
playbooks/files/edge2-9300/: edge-l2-flooding-overlay.conf  edge-l2-l3-overlay.conf  edge-pub-sub.conf
playbooks/files/fusion1-isr4451/: fusion-bgp.conf
playbooks/files/fusion2-isr4451/: fusion-bgp.conf
playbooks/filter_plugins/: flatten_vrfs.py
playbooks/lookup_plugins/: check_interface.py
playbooks/misc/: address.yml  gather-facts.yml  show-version.yml  vars.yml
playbooks/templates/: border-bgp.j2  border-dynamic-external.j2  border-l2-l3-overlay.j2  border-pub-sub.j2  edge-interfaces.j2  edge-l2-flooding-overlay.j2  edge-l2-l3-overlay.j2  edge-pub-sub.j2  fusion-bgp-router.j2  fusion-bgp.j2
tmp/: sandbox.py
